--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                                                                 <th class="b1">জমির পরিমাণ (শতাংশ)</th>
                                                             </tr>
                                                         </thead>
-                                                        <tbody style="height: 42px;">
+                                                        <tbody style="height: 84px;">
                                                             <tr>
                                                                 <td class="b1 input_bangla text-center">১</td>
                                                                 <td class="b1 input_bangla">৮৬২</td>
@@ -244,6 +244,18 @@
                                                                 <td class="b1">
                                                                     বাড়ী( আবাসিক) </td>
                                                                 <td class="b1 input_bangla">২৭.০০০০০</td>
+                                                            </tr><tr>
+                                                                <td class="b1 input_bangla text-center">৩</td>
+                                                                <td class="b1 input_bangla">৯৩৯</td>
+                                                                <td class="b1">
+                                                                    দলা( কৃষি২) </td>
+                                                                <td class="b1 input_bangla">১০.০০০০০</td>
+                                                            </tr><tr>
+                                                                <td class="b1 input_bangla text-center">৪</td>
+                                                                <td class="b1 input_bangla">৯৮২</td>
+                                                                <td class="b1">
+                                                                    দলা( কৃষি২) </td>
+                                                                <td class="b1 input_bangla">১২.০০০০০</td>
                                                             </tr>
                                                         </tbody>
                                                     </table>
@@ -256,15 +268,27 @@
                                                                 <th class="b1">জমির পরিমাণ (শতাংশ)</th>
                                                             </tr>
                                                         </thead>
-                                                        <tbody style="height: 42px;">
+                                                        <tbody style="height: 84px;">
                                                             <tr>
-                                                                <td class="b1 input_bangla text-center">৩</td>
+                                                                <td class="b1 input_bangla text-center">৫</td>
                                                                 <td class="b1 input_bangla">৯৩৯</td>
                                                                 <td class="b1">
                                                                     দলা( কৃষি২) </td>
                                                                 <td class="b1 input_bangla">১০.০০০০০</td>
                                                             </tr><tr>
-                                                                <td class="b1 input_bangla text-center">৪</td>
+                                                                <td class="b1 input_bangla text-center">৬</td>
+                                                                <td class="b1 input_bangla">৯৮২</td>
+                                                                <td class="b1">
+                                                                    দলা( কৃষি২) </td>
+                                                                <td class="b1 input_bangla">১২.০০০০০</td>
+                                                            </tr><tr>
+                                                                <td class="b1 input_bangla text-center">৭</td>
+                                                                <td class="b1 input_bangla">৯৩৯</td>
+                                                                <td class="b1">
+                                                                    দলা( কৃষি২) </td>
+                                                                <td class="b1 input_bangla">১০.০০০০০</td>
+                                                            </tr><tr>
+                                                                <td class="b1 input_bangla text-center">৮</td>
                                                                 <td class="b1 input_bangla">৯৮২</td>
                                                                 <td class="b1">
                                                                     দলা( কৃষি২) </td>
