--- a/index.html
+++ b/index.html
@@ -323,20 +323,20 @@
 
                                                         <tr>
                                                             <td align="center">০</td>
-                                                            <td align="center">১,৩৯২</td>
+                                                            <td align="center">১,০৯২</td>
                                                             <td align="center">১০৮</td>
                                                             <td align="center">৫৮০</td>
                                                             <td align="center">
-                                                                ২,০৮০</td>
+                                                                ১,৮৮০</td>
 
-                                                            <td align="center">২,০৮০</td>
+                                                            <td align="center">১,৮৮০</td>
                                                             <td align="center">
                                                                 ০ </td>
                                                             <td align="center"></td>
                                                         </tr>
                                                     </table>
                                                     <div style="width:100% !important; margin:10px 2px ;">
-                                                        <p class="dotted_botton"> সর্বমোট (কথায়): দুই হাজার আশি টাকা মাত্র ।
+                                                        <p class="dotted_botton"> সর্বমোট (কথায়): এক হাজার আট শত আশি দশমিক টাকা মাত্র ।
                                                         </p>
                                                     </div>
                                                     <div class="row">
