--- a/index.html
+++ b/index.html
@@ -327,16 +327,16 @@
                                                             <td align="center">১০৮</td>
                                                             <td align="center">৫৮০</td>
                                                             <td align="center">
-                                                                ১,৮৮০</td>
+                                                                ১,৭৮০</td>
 
-                                                            <td align="center">১,৮৮০</td>
+                                                            <td align="center">১,৭৮০</td>
                                                             <td align="center">
                                                                 ০ </td>
                                                             <td align="center"></td>
                                                         </tr>
                                                     </table>
                                                     <div style="width:100% !important; margin:10px 2px ;">
-                                                        <p class="dotted_botton"> সর্বমোট (কথায়): এক হাজার আট শত আশি দশমিক টাকা মাত্র ।
+                                                        <p class="dotted_botton"> সর্বমোট (কথায়): এক হাজার সাত শত আশি দশমিক টাকা মাত্র ।
                                                         </p>
                                                     </div>
                                                     <div class="row">
